--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="description" content="react-app for my reusable components - [Table - Inputs - Heads - Buttons]" />
-  <title>React App</title>
+  <title>Reusables</title>
 </head>
 
 <body>
