--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="icon" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="description" content="react-app for my reusable components - [Table - Inputs - Heads - Buttons]" />
-  <title>Reusables</title>
+  <title>Frontend side by side</title>
 </head>
 
 <body>
