--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="react-app for my reusable components - [Table - Inputs - Heads - Buttons]" />
+  <meta name="description" content="frontend side by side is a react-app created by @omarahmed8k for reusable components, advanced topics and some tips and tricks" />
   <title>Frontend side by side</title>
 </head>
 
